--- a/src/components/templates/Habilidades.astro
+++ b/src/components/templates/Habilidades.astro
@@ -1,12 +1,12 @@
 ---
 import { getI18N } from '@/i18n';
-import { TabsHabilidades } from '@/components/organisms/TabsHabilidades';
+// import { TabsHabilidades } from '@/components/organisms/TabsHabilidades';
 
 const { currentLocale } = Astro;
 const i18n = getI18N({ currentLocale });
 ---
 
-<div class="hero min-h-[70vh]">
+<!-- <div class="hero min-h-[70vh]">
 	<div class="hero-content p-0 text-center">
 		<div class="max-w-5xl pb-10 animate__animated animate__zoomInUp">
 			<div class="bg-base-content bg-opacity-10  border border-base-content rounded-xl shadow-base-content py-5 px-5 card">
@@ -18,4 +18,4 @@ const i18n = getI18N({ currentLocale });
 			</div>
 		</div>
 	</div>
-</div>
+</div> -->
