style: Se agregan tipado de props

--- a/src/components/templates/Acerca.astro
+++ b/src/components/templates/Acerca.astro
@@ -1,6 +1,6 @@
 ---
 import { TabsAcerca } from '@/components/organisms/TabsAcerca'
-import Bubble from '../atoms/Bubble.astro';
+import Bubble from '@/components/atoms/Bubble.astro';
 const { currentLocale } = Astro;
 ---
 
