--- a/src/components/templates/Header.astro
+++ b/src/components/templates/Header.astro
@@ -1,6 +1,6 @@
 ---
 import { getI18N } from '@/i18n';
-import Bubble from '../atoms/Bubble.astro';
+import Bubble from '@/components/atoms/Bubble.astro';
 
 const { currentLocale } = Astro;
 const i18n = getI18N({ currentLocale });
