--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -69,7 +69,7 @@ const capitalizedTitle = capitalizeFirstLetter(titleLang);
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   </head>
   <body class="bg-base-300">
-    <div>
+    <div id="swup" class="transition-fade ">
       <slot />
     </div>
     <script defer src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
@@ -79,6 +79,7 @@ const capitalizedTitle = capitalizeFirstLetter(titleLang);
         document.documentElement.setAttribute("data-theme", theme);
       })();
     </script>
+      <script src="../js/swup-init.js"></script>
   </body>
 </html>
 <style is:global>
