--- a/src/pages/en/projects.astro
+++ b/src/pages/en/projects.astro
@@ -7,10 +7,12 @@ const currentPath = Astro.url.pathname;
 ---
 
 <Layout>
-  <header class="relative w-full">
+  <header class="relative w-full"> 
     <Nav client:load currentLocale={currentLocale} currentPath={currentPath}/>
-    <div>
-      <Proyectos />
-    </div>
+    <section class="w-full h-full">
+      <div class="hero bg-base-300 min-h-screen">
+        <Proyectos />
+      </div>
+    </section>
   </header>
 </Layout>
