feat: Se crea y termina ruta contacto

--- a/src/components/templates/Contacto.astro
+++ b/src/components/templates/Contacto.astro
@@ -9,5 +9,5 @@ const i18n = getI18N({ currentLocale });
 ---
 
 <div class="hero-content flex-col">
-  <Form currentLocale={currentLocale}/>
+  <Form client:load currentLocale={currentLocale}/>
 </div>
