refactor: Se optimiza el swiper de proyectos, nivel de cargas en css

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,7 @@
 ---
 import 'animate.css';
+import "swiper/swiper-bundle.css";
+import "../styles/styles.css";
 import {dataTitlePage, dataTitlePageEN, dataTitlePageFR}from '@/utils/dataTitlePage';
 
 
