--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,21 +1,26 @@
 ---
-import 'animate.css';
-import "../styles/styles.css";
+import "animate.css";
+import "@/styles/styles.css";
+import "@/styles/app.css";
 import "swiper/swiper-bundle.css";
-import {dataTitlePage, dataTitlePageEN, dataTitlePageFR}from '@/utils/dataTitlePage';
-
+import {
+  dataTitlePage,
+  dataTitlePageEN,
+  dataTitlePageFR,
+} from "@/utils/dataTitlePage";
 
 const pathSegments = Astro.url.pathname.split("/");
-const {currentLocale} = Astro;
+const { currentLocale } = Astro;
 
-const titles = currentLocale === 'en' ? dataTitlePageEN :
-               currentLocale === 'fr' ? dataTitlePageFR :
-               dataTitlePage;
+const titles =
+  currentLocale === "en"
+    ? dataTitlePageEN
+    : currentLocale === "fr"
+      ? dataTitlePageFR
+      : dataTitlePage;
 
-
-const pageIndex = pathSegments[2] === 'about' ? 1 :
-                  pathSegments[2] === 'projects' ? 2 :
-                  0;
+const pageIndex =
+  pathSegments[2] === "about" ? 1 : pathSegments[2] === "projects" ? 2 : 0;
 
 const titleLang = titles[pageIndex];
 
@@ -37,26 +42,50 @@ const capitalizedTitle = capitalizeFirstLetter(titleLang);
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://khelde.vercel.app/es/home" />
     <meta property="og:title" content="Portafolio de Erick Gonzalez" />
-    <meta property="og:description" content="Portafolio de Erick Gonzalez, desarrollador web junior con experiencia en frontend y backend. Mira mis proyectos y habilidades." />
+    <meta
+      property="og:description"
+      content="Portafolio de Erick Gonzalez, desarrollador web junior con experiencia en frontend y backend. Mira mis proyectos y habilidades."
+    />
     <meta property="og:image" content="https://khelde.vercel.app/kdl.webp" />
-    <meta property="og:image:alt" content="Logo de Erick Gonzalez, desarrollador web." />
+    <meta
+      property="og:image:alt"
+      content="Logo de Erick Gonzalez, desarrollador web."
+    />
     <meta property="og:site_name" content="Portafolio Erick Gonzalez" />
     <!-- Twitter Meta Tags -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://khelde.vercel.app/es/home" />
     <meta property="twitter:title" content="Portafolio de Erick Gonzalez" />
-    <meta property="twitter:description" content="Portafolio de Erick Gonzalez, desarrollador web junior con experiencia en frontend y backend. Mira mis proyectos y habilidades." />
-    <meta property="twitter:image" content="https://khelde.vercel.app/kdl.webp" />
-    <meta property="twitter:image:alt" content="Logo de Erick Gonzalez, desarrollador web." />
+    <meta
+      property="twitter:description"
+      content="Portafolio de Erick Gonzalez, desarrollador web junior con experiencia en frontend y backend. Mira mis proyectos y habilidades."
+    />
+    <meta
+      property="twitter:image"
+      content="https://khelde.vercel.app/kdl.webp"
+    />
+    <meta
+      property="twitter:image:alt"
+      content="Logo de Erick Gonzalez, desarrollador web."
+    />
     <!-- Metadatos para WhatsApp (Usa los mismos que para Open Graph) -->
     <meta property="og:image" content="https://khelde.vercel.app/kdl.webp" />
     <meta property="og:title" content="Portafolio de Erick Gonzalez" />
-    <meta property="og:description" content="Portafolio de Erick Gonzalez, desarrollador web junior con experiencia en frontend y backend. Mira mis proyectos y habilidades." />
+    <meta
+      property="og:description"
+      content="Portafolio de Erick Gonzalez, desarrollador web junior con experiencia en frontend y backend. Mira mis proyectos y habilidades."
+    />
     <!-- Metadatos personalizados para IA u otras plataformas -->
     <meta property="ia:markup_url" content="https://khelde.vercel.app/markup" />
-    <meta property="ia:markup_url_dev" content="https://khelde.vercel.app/markup_dev" />
+    <meta
+      property="ia:markup_url_dev"
+      content="https://khelde.vercel.app/markup_dev"
+    />
     <meta property="ia:rules_url" content="https://khelde.vercel.app/rules" />
-    <meta property="ia:rules_url_dev" content="https://khelde.vercel.app/rules_dev" />
+    <meta
+      property="ia:rules_url_dev"
+      content="https://khelde.vercel.app/rules_dev"
+    />
     <!-- Metadatos adicionales -->
     <meta name="theme-color" content="#6f37cf" />
     <meta name="robots" content="index, follow" />
@@ -71,16 +100,16 @@ const capitalizedTitle = capitalizeFirstLetter(titleLang);
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   </head>
   <body class="bg-base-300">
-    <div id="swup" class="transition-fade ">
+    <div id="swup" class="transition-fade">
       <slot />
     </div>
     <script>
-      (function() {
-        const theme = localStorage.getItem("theme") || "nord";
+      (function () {
+        const theme = localStorage.getItem("theme") || "winter";
         document.documentElement.setAttribute("data-theme", theme);
       })();
     </script>
-      <script src="../js/swup-init.js"></script>
+    <script src="../js/swup-init.js"></script>
   </body>
 </html>
 <style is:global>
