feat: Correcion CRM imagen, adaptacion modulo proyectos

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,11 +1,13 @@
 .swiper {
   width: 100%;
   height: 100%;
+  cursor: grab;
 }
 
 .swiper-slide {
   text-align: center;
   font-size: 18px;
+  cursor: grab;
 
   /* Center slide text vertically */
   display: flex;
