--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -92,7 +92,7 @@ const capitalizedTitle = capitalizeFirstLetter(titleLang);
     <meta name="author" content="muke78" />
     <meta name="copyright" content="Copyright © 2025" />
     <link rel="icon" type="image/svg+xml" href="/kdl.webp" />
-    <link rel="canonical" href="https://khelde.vercel.app/" />
+    <link rel="canonical" href="https://khelde.vercel.app/es" />
     <!-- Sitemap -->
     <link rel="sitemap" href="/sitemap-index.xml" />
     <!-- Fuentes -->
