--- a/src/components/templates/Header.astro
+++ b/src/components/templates/Header.astro
@@ -32,7 +32,7 @@ const i18n = getI18N({ currentLocale });
           <div class="flex justify-center items-center w-full md:w-1/2">
               <a 
               href="https://docs.google.com/viewer?url=https://khelde.vercel.app/CV_Erick_Miguel_Gonzalez_Rivera.pdf" 
-              target="_blank" class="btn btn-primary btn-outline text-lg w-full" 
+              target="_blank" class="btn btn-neutral text-lg w-full" 
               aria-label="Ver cv para saber mas acerca de mi"> {i18n.ABOUTME.ABOUT_DOWNLOAD_CV} <span class="text-xl">{v.iconoAbrir && <v.iconoAbrir/>}</span></a>
           </div>
       </div>
