--- a/src/pages/es/home.astro
+++ b/src/pages/es/home.astro
@@ -2,17 +2,31 @@
 import Layout from '@/layouts/Layout.astro';
 import Header from '@/components/templates/Header.astro';
 import { Nav } from '@/components/organisms/Nav';
+import Acerca from '@/components/templates/Acerca.astro';
+import Contactos from '@/components/templates/Contacto.astro'
+import Proyectos from '@/components/templates/Proyectos.astro';
 const {currentLocale} = Astro;
 const currentPath = Astro.url.pathname;
 ---
 
 <Layout>
   <header class="relative w-full"> 
-    <Nav client:load currentLocale={currentLocale} currentPath={currentPath}/>
+    <div class="w-full lg:p-0 md:p-10 p-10">
+      <Nav client:load currentLocale={currentLocale} currentPath={currentPath}/>
+    </div>
     <section class="w-full h-full">
       <div class="hero bg-base-300 min-h-screen">
         <Header />
       </div>
+      <div class="hero bg-base-300 min-h-screen flex justify-center items-start">
+          <Acerca />
+      </div>
+      <div class="hero bg-base-300 min-h-screen">
+        <Proyectos />
+      </div>
+        <div class="hero bg-base-300 min-h-screen">
+        <Contactos>
+       </div>
     </section>
   </header>
 </Layout>
