feat(uxiu): Se hace un cambio de interfaz completo con nueva seccion de opiniones, mejkores transiciones, mejores dimensiones y alineamiento de componentes

--- a/src/components/templates/Acerca.astro
+++ b/src/components/templates/Acerca.astro
@@ -4,7 +4,6 @@ import {Bubble} from '@/components/atoms/Bubble';
 const { currentLocale } = Astro;
 ---
 
-<div class="hero-content flex w-full lg:mt-36">
-   
+<div class="hero-content mt-32">
     <TabsAcerca client:load currentLocale={currentLocale}/>
 </div>
