--- a/src/components/templates/Opiniones.astro
+++ b/src/components/templates/Opiniones.astro
@@ -1,8 +1,14 @@
 ---
+// src/pages/index.astro
+// import { comments } from "@/db/schema";
+// import { db } from "@/lib/db";
+
+// const data = await db.select().from(comments).all();
+
 import {Testimonials} from '@/components/features/opinions/Testimonials'
 const {currentLocale}  = Astro
 ---
 
 <div class="hero-content mt-32">
-    <Testimonials client:load currentLocale={currentLocale}/>
+    <Testimonials client:load currentLocale={currentLocale} data={""}/>
 </div>
