feat(balanceSheet): Implementacion completa con drizzle para guardar comentarios, cambios ux ui, separacion de interfaces, optimizacion de Props types
Refactorización importante de las funciones de opiniones y proyectos: se añadió un nuevo flujo de envío de opiniones, se actualizó el esquema de la base de datos (se cambiaron los nombres de las columnas y se añadió la tabla de proyectos) y se eliminaron utilidades y páginas no utilizadas. Se actualizaron los archivos i18n, los datos de navegación y la configuración del entorno. Se eliminaron las dependencias en package.json y lockfile.

--- a/src/components/templates/Opiniones.astro
+++ b/src/components/templates/Opiniones.astro
@@ -1,14 +1,15 @@
 ---
 // src/pages/index.astro
-// import { comments } from "@/db/schema";
-// import { db } from "@/lib/db";
+import { comments } from "@/db/schema";
+import { db } from "@/lib/db";
+import type { Testimonial } from '@/interfaces/currentLang.interface';
 
-// const data = await db.select().from(comments).all();
+const data = (await db.select().from(comments).all()) as Testimonial[];
 
 import {Testimonials} from '@/components/features/opinions/Testimonials'
 const {currentLocale}  = Astro
 ---
 
-<div class="hero-content mt-32">
-    <Testimonials client:load currentLocale={currentLocale} data={""}/>
+<div class="hero-content mt-16">
+    <Testimonials client:load currentLocale={currentLocale} data={data}/>
 </div>
