--- a/src/components/templates/Header.astro
+++ b/src/components/templates/Header.astro
@@ -6,7 +6,7 @@ import {Bubble }from '@/components/atoms/Bubble';
 const { currentLocale } = Astro;
 const i18n = getI18N({ currentLocale });
 ---
-<div class="hero-content flex-col lg:flex-row-reverse">
+<div class="hero-content flex-col lg:flex-row-reverse mt-16">
    <!-- Burbuja 1 con client:load -->
   <Bubble 
     className="bg-accent" 
