--- a/src/pages/es/home.astro
+++ b/src/pages/es/home.astro
@@ -7,28 +7,27 @@ import Contactos from '@/components/templates/Contacto.astro'
 import Proyectos from '@/components/templates/Proyectos.astro';
 import Opiniones from '@/components/templates/Opiniones.astro';
 const {currentLocale} = Astro;
-const currentPath = Astro.url.pathname;
 ---
 
 <Layout>
   <header class="relative w-full transition-all duration-500 ease-in-out"> 
     <div class="w-full lg:p-0 md:p-10 p-10">
-      <Nav client:load currentLocale={currentLocale} currentPath={currentPath}/>
+      <Nav client:load currentLocale={currentLocale}/>
     </div>
     <section class="w-full h-full">
-      <div class="hero bg-base-300 min-h-screen">
+      <div class="hero bg-base-300 min-h-screen" id="home">
         <Header />
       </div>
-      <div class="hero bg-base-300 min-h-screen flex justify-center items-start">
+      <div class="hero bg-base-300 min-h-screen flex justify-center items-start" id="about">
         <Acerca />
       </div>
-      <div class="hero bg-base-300 min-h-screen">
+      <div class="hero bg-base-300 min-h-screen" id="projects">
         <Proyectos />
       </div>
-      <div class="hero bg-base-300 min-h-screen">
+      <div class="hero bg-base-300 min-h-screen" id="opinions">
         <Opiniones />
       </div>
-      <div class="hero bg-base-300 min-h-screen">
+      <div class="hero bg-base-300 min-h-screen" id="contact">
         <Contactos>
       </div>
     </section>
