feat(experience): Se mejora la experencia de usuario al no haber comentarios y al no encotrar la pagina deseada

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -12,6 +12,7 @@ const i18n = getI18N({ currentLocale });
     <div class="hero backdrop-blur-[100px] backdrop-saturate-[180%] min-h-screen">
       <div class="hero-content text-center">
         <div class="max-w-md">
+          <img src="/404.svg" alt="No se encontro la pagina" aria-label="No se encontro la ruta especificada"/>
           <h1 class="text-9xl font-bold">404</h1>
           <p class="py-6 text-2xl text-base-content">
           {i18n[404]["404_BODY"]}
