--- a/src/pages/es/home.astro
+++ b/src/pages/es/home.astro
@@ -21,7 +21,7 @@ const {currentLocale} = Astro;
       <div class="hero bg-base-300 min-h-screen flex justify-center items-start" id="about">
         <Acerca />
       </div>
-      <div class="hero bg-base-300 min-h-screen" id="projects">
+      <div class="hero bg-base-300 min-h-screen flex justify-center items-start" id="projects">
         <Proyectos />
       </div>
       <div class="hero bg-base-300 min-h-screen" id="opinions">
