feat(icons): Se migra iconos desde react-icons a lucide de react

--- a/src/components/templates/Acerca.astro
+++ b/src/components/templates/Acerca.astro
@@ -3,6 +3,6 @@ import { TabsAcerca } from '@/components/organisms/TabsAcerca'
 const { currentLocale } = Astro;
 ---
 
-<div class="hero-content mt-16">
+<div class="hero-content lg:p-9 md:p-8 sm:p-4 p-2 mt-16">
     <TabsAcerca client:load currentLocale={currentLocale}/>
 </div>
