feat(optimization): Se optimiza codigo y animaciones de entrada, se agregan mas tablas a los schemas de drizzle, se agrega de nuevo dotenv

--- a/src/components/templates/Header.astro
+++ b/src/components/templates/Header.astro
@@ -42,22 +42,22 @@ const i18n = getI18N({ currentLocale });
 		</div>
 		<div class="flex justify-center md:justify-center lg:justify-start mt-4 gap-4">
 			<a href="https://github.com/muke78" target="_blank" aria-label="Saber mas acerca de mis repositorios y lo que he hecho" class="hover:scale-110 transition-transform">
-				<span class="hover:text-primary duration-300">{
+				<span class="hover:text-primary">{
 					<Github size={36} />}
 				</span>
 			</a>
 			<a href="https://www.linkedin.com/in/erick-miguel-gonz%C3%A1lez-rivera-96265b248/" target="_blank" aria-label="Saber mas acerca de experiencia" class="hover:scale-110 transition-transform">
-				<span class="hover:text-primary duration-300">{
+				<span class="hover:text-primary">{
 					<Linkedin size={36} />}
 				</span>
 			</a>
 			<a href="https://wa.me/+527203966119" target="_blank" aria-label="Número de teléfono" class="hover:scale-110 transition-transform">
-				<span class="text-4xl hover:text-primary duration-300">
+				<span class="hover:text-primary">
 					{<MessageCircle size={36}/>}
 				</span>
 			</a>
 			<a href="mailto:erickm.gonzalez.rivera@gmail.com" target="_blank" aria-label="Correo electrónico" class="hover:scale-110 transition-transform">
-				<span class="hover:text-primary duration-300">
+				<span class="hover:text-primary">
 					{<Mail size={36} />}
 				</span>
 			</a>
