--- a/src/components/templates/Opiniones.astro
+++ b/src/components/templates/Opiniones.astro
@@ -1,6 +1,6 @@
 ---
 // src/pages/index.astro
-import { comments } from "@/db/schema";
+import { comments } from "@/db/comments";
 import { db } from "@/lib/db";
 import type { Testimonial } from '@/interfaces/currentLang.interface';
 
