feat(responsabilities): Se separan responsabilidades de funciones para drizzle se eliminar archuivos innecesarios

--- a/src/components/templates/Contacto.astro
+++ b/src/components/templates/Contacto.astro
@@ -3,6 +3,6 @@ import { Form } from '@/components/features/contact/Form'
 const { currentLocale } = Astro;
 ---
 
-<div class="hero-content flex-col">
+<div class="hero-content">
   <Form client:load currentLocale={currentLocale} />
 </div>
