--- a/src/components/templates/Acerca.astro
+++ b/src/components/templates/Acerca.astro
@@ -3,6 +3,6 @@ import { TabsAcerca } from '@/components/organisms/TabsAcerca'
 const { currentLocale } = Astro;
 ---
 
-<div class="hero-content lg:p-9 md:p-8 sm:p-4 p-4 mt-16">
+<div class="isolate flex w-7xl items-start justify-start gap-4 lg:p-9 md:p-8 sm:p-4 p-4 mt-16">
     <TabsAcerca client:load currentLocale={currentLocale}/>
 </div>
