--- a/src/pages/es/home.astro
+++ b/src/pages/es/home.astro
@@ -24,7 +24,7 @@ const {currentLocale} = Astro;
       <div class="hero bg-base-300 min-h-screen flex justify-center items-start" id="projects">
         <Proyectos />
       </div>
-      <div class="hero bg-base-300 min-h-screen" id="opinions">
+      <div class="hero bg-base-300 min-h-screen flex justify-center items-start" id="opinions">
         <Opiniones />
       </div>
       <div class="hero bg-base-300 min-h-screen" id="contact">
